# bee-agent-framework

./: .gitignore  CODE_OF_CONDUCT.md  MAINTAINERS.md  README.md  mise.toml  package.json
python/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.toml
python/beeai_framework/: context.py  errors.py  retryable.py  runnable.py  template.py
python/beeai_framework/adapters/a2a/: __init__.py
python/beeai_framework/adapters/acp/: __init__.py
python/beeai_framework/adapters/beeai_platform/: __init__.py  context.py
python/beeai_framework/adapters/groq/: __init__.py
python/beeai_framework/adapters/langchain/: __init__.py  tools.py
python/beeai_framework/adapters/litellm/: chat.py  embedding.py  utils.py
python/beeai_framework/adapters/mcp/: __init__.py
python/beeai_framework/adapters/mistralai/: __init__.py
python/beeai_framework/adapters/ollama/: __init__.py
python/beeai_framework/adapters/openai/: __init__.py
python/beeai_framework/adapters/watsonx/: __init__.py
python/beeai_framework/adapters/watsonx_orchestrate/: __init__.py  _api.py  _utils.py
python/beeai_framework/agents/: __init__.py  base.py  types.py
python/beeai_framework/agents/experimental/: __init__.py  _utils.py  agent.py  events.py  prompts.py  types.py
python/beeai_framework/agents/react/: __init__.py  agent.py  types.py
python/beeai_framework/agents/requirement/: agent.py  events.py  prompts.py  types.py
python/beeai_framework/agents/tool_calling/: __init__.py  agent.py  prompts.py  types.py  utils.py
python/beeai_framework/backend/: __init__.py  backend.py  chat.py  constants.py  document_processor.py  embedding.py  errors.py  message.py  types.py  utils.py  vector_store.py
python/beeai_framework/cache/: __init__.py
python/beeai_framework/emitter/: __init__.py  emitter.py  types.py  utils.py
python/beeai_framework/logger/: __init__.py
python/beeai_framework/memory/: base_memory.py  summarize_memory.py  token_memory.py  utils.py
python/beeai_framework/middleware/: stream_tool_call.py  trajectory.py
python/beeai_framework/serve/: __init__.py  errors.py  server.py
python/beeai_framework/tools/: events.py  handoff.py  openapi.py  think.py  tool.py  types.py
python/beeai_framework/tools/code/: python.py  sandbox.py
python/beeai_framework/tools/mcp/: __init__.py  mcp.py
python/beeai_framework/tools/search/: base.py
python/beeai_framework/tools/weather/: openmeteo.py
python/beeai_framework/utils/: __init__.py  asynchronous.py  cancellation.py  cloneable.py  counter.py  dicts.py  funcs.py  io.py  lists.py  models.py  schema.py  strings.py
python/beeai_framework/workflows/: workflow.py
python/beeai_framework/workflows/agent/: agent.py
python/cz_commitizen/: __init__.py  monorepo_commits.py
python/docs/: _sidebar.md  agents.md  backend.md  index.html  integrations.md  logger.md  memory.md  serve.md  tools.md  tutorials.md
python/docs/experimental/: requirement_agent.md
python/eval/: _utils.py  conftest.py  model.py  setup.py
python/eval/agents/requirement/: _utils.py  test_greeting.py
python/examples/: README.md  basic.py  llms.py  requirements.txt  simple_runnable.py
python/examples/agents/: custom_agent.py  granite.py  rag_agent.py  react.py  react_advanced.py  simple.py  tool_calling.py  tool_calling_structured.py
python/examples/agents/experimental/: human.py
python/examples/agents/providers/: a2a_agent.py  acp.py  agent_stack.py  beeai_platform.py  (+1 more)
python/examples/backend/: backend.py  chat.py  chat_stream.py  chat_stream_verbose.py  embedding.py  module_loading.py  structured.py  tool_calling.py
python/examples/cache/: cache_fn.py  decorator_cache.py  decorator_cache_complex.py  file_cache.py  file_cache_custom_provider.py  llm_cache.py
python/examples/emitter/: advanced.py  agent_matchers.py  base.py  matchers.py  piping.py
python/examples/integrations/: langgraph_example.py
python/examples/logger/: agent.py
python/examples/memory/: agent_memory.py  filtering_memory.py  llm_memory.py  summarize_memory.py
python/examples/middleware/: content_filter.py  llm_streaming.py  multi_agent_references.py  override.py  strict_content_filter.py
python/examples/notebooks/: README.md  agents.ipynb  agents_colab.ipynb  basics.ipynb  basics_colab.ipynb  requirements.txt  watsonx.ipynb  workflows.ipynb  workflows_colab.ipynb
python/examples/observability/: simple_observe.py  simple_on.py
python/examples/serve/: a2a_server.py  acp.py  acp_with_custom_agent.py  agent_stack.py  agent_stack_await.py  agent_stack_custom.py  agent_stack_llm.py  beeai_platform.py  beeai_platform_await.py  beeai_platform_custom.py  beeai_platform_llm.py  extend_mcp_server.py  mcp_agent.py  mcp_tool.py  openai_server.py  watsonx_orchestrate.py
python/examples/templates/: arrays.py  basic_template.py  forking.py  functions.py  objects.py
python/examples/tools/: advanced.py  base.py  decorator.py  duckduckgo.py  mcp_agent.py  mcp_slack_agent.py  mcp_tool_creation.py  openapi.py  openmeteo.py  python_tool.py
python/examples/workflows/: emitter.py  multi_agents.py  multi_agents_simple.py  remote.py  searx_agent.py  travel_advisor.py
python/scripts/: absolute_links.py  generate_shims.py
python/tests/: conftest.py  errors_test.py  test_custom_logger.py  test_emitter.py  test_retryable.py  test_runnable.py
python/tests/agents/: test_requirements_reasoner.py
python/tests/backend/: test_chatmodel.py  test_message.py  test_utils.py
python/tests/cache/: test_null_cache.py  test_sliding_cache.py  test_unconstrained_cache.py
python/tests/examples/: test_examples.py
python/tests/parsers/: line_prefix_test.py
python/tests/runners/: test_default_runner.py
python/tests/templates/: test_templates.py
python/tests/tools/: test_decorator.py  test_duckduckgo.py  test_emitter.py  test_mcp_tool.py  test_opemmeteo.py  test_python.py  test_sandbox.py  test_wikipedia.py
python/tests/utils/: test_cloneable.py  test_json_schema.py
python/tests/workflows/: test_multi_agents.py  test_workflow.py  test_workflow_nav.py
(+507 files in other folders)
